--- a/Oportuniza.Infrastructure/Oportuniza.Infrastructure.csproj
+++ b/Oportuniza.Infrastructure/Oportuniza.Infrastructure.csproj
@@ -6,4 +6,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Configurations\" />
+    <Folder Include="Data\" />
+    <Folder Include="Migrations\" />
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
 </Project>
